--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,38 @@
 {
   "translation": {
-    "welcome": "Welcome!"
+    "welcome": "Welcome!",
+    "cta": "See my work, let's connect :)",
+    "download_cv": "Download CV",
+    "copy": {
+      "success": "Copied!",
+      "failed": "Failed to copy!"
+    },
+    "presentation": {
+      "title": "Brief presentation",
+      "part_1": "With more than 4 years of professional experience, I've worked with a variety of technologies, and I've been specializing more and more in the frontend area, mainly with React, TypeScript, Tailwind and Jest.",
+      "part_2": "I currently spend time updating myself with new tools, best practices, modern testing, and creating my own projects to regain fluency and explore new ways to transform designs into efficient, accessible and tasteful applications, writing more readable, maintainable and robust code."
+    },
+    "tech_stack": {
+      "title": "Go-to tech stack"
+    },
+    "soft_skills": {
+      "title": "Soft skills",
+      "content": [
+      "🧠 Analytical & neurodivergent thinking",
+      "🚀 Proactive mindset & hunger for learning",
+      "🤝🏻 Clear & effective communication",
+      "🔁 Adaptability & resilience",
+      "⚡ Agile & quick to respond"
+    ]},
+    "about_me": {
+      "title": "A bit about me",
+      "fact_1": {
+        "part_1": "I read ",
+        "part_2": "Mistborn",
+        "part_3": ", by Brandon Sanderson"
+      },
+      "fact_2": "I'm a Krav-Maga instructor",
+      "fact_3": "I love board games"
+    }
   }
 }
