--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -2,7 +2,10 @@
   "translation": {
     "welcome": "¡Hola!",
     "cta": "Echa un vistazo a mi trabajo :)",
-    "download_cv": "Descargar CV",
+    "download_cv": {
+      "title": "Download CV",
+      "filename": "{{- baseURL}}Claudia Martín ES.pdf"
+    },
     "copy": {
       "success": "¡Copiado!",
       "failed": "Error al copiar"
